app/styles/components/header.css
.header--wrapper {
    --gap: clamp(var(--spacing), 2vw, var(--spacing-xl));
}

.nav__wrapper {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    padding-inline-start: var(--spacing);
    gap: var(--gap);
    height: 100%;
    width: 100%;
    padding-block: var(--spacing-xxl);
}

.nav__primary ul {
    flex-direction: column;
}

.header__toggles,
.nav__primary ul {
    display: flex;
    width: 100%;
    gap: var(--gap);
    transition: transform 150ms ease;
}

.nav__list__item[aria-current="page"] {
    font-weight: 700;

    & .icon {
        fill: none;
        stroke: currentColor;
    }
}

.nav__list__item:hover .icon,
.nav__list__item:focus-visible .icon {
    transform: translateY(-1px) scale(1.125);
}

.header__toggles {
    margin-block-start: auto;
    flex-wrap: nowrap;
    justify-content: space-between;
    padding-inline: var(--spacing-lg);
}

/*  > mobile 560px+ */
@media screen and (min-width: 35.01rem) {
    .nav__wrapper {
        flex-direction: row;
        width: clamp(var(--bp-xs), 100%, 100ch);
        padding-block-start: var(--spacing-lg);
    }


    .nav__primary ul {
        padding-block: var(--spacing-sm);
        padding-inline-end: 0;
        margin-right: auto;
        flex-direction: row;
        width: fit-content;
    }

    .header__toggles {
        justify-content: flex-end;
        padding-inline-start: 0;
    }

}

/*  Desktop */
@media screen and (min-width: 48.01rem) {
    .nav__primary ul {
        width: 100%;
    }
}

